# image_embedding

./: .gitignore  Resnet_VAE_image_embedding.ipynb  pyproject.toml  testimage.ipynb  vision_MNIST.ipynb
src/: vae_resnet.py
submission/: submission.csv
