[tool.poetry]
name = "image_embedding"
version = "0.1.0"
description = ""
authors = ["tlc91 <thomas.curran@mistplay.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
pyarrow = "^9.0.0"
pydicom = "^2.3.0"
kornia = "^0.6.6"
opencv-python = "^4.6.0"
scikit-image = "^0.19.3"
jupyterlab = "^3.4.4"
kaggle = "^1.5.12"
fastai = "^2.7.9"
torch-summary = "^1.4.5"
pytorch-lightning = "^1.7.0"
umap-learn = "^0.5.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
